--- a/Bizon/Bizon/Resources/Base.lproj/Localizable.strings
+++ b/Bizon/Bizon/Resources/Base.lproj/Localizable.strings
@@ -44,6 +44,7 @@
 
 "3019" = "Authentication cancelled";
 
+"3020" = "Nvidia site is not available at the moment. Please try again later.";
 //"Checking IOPCITunnelCompatible keys...\n" = "Checking IOPCITunnelCompatible keys...\n";
 
 //"IOPCITunnelCompatible mods are valid." = "IOPCITunnelCompatible mods are valid.";
